--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -38,12 +38,23 @@ BR2_PACKAGE_ALSA_UTILS=y
 # BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_FFMPEG_AVRESAMPLE=y
+BR2_PACKAGE_GSTREAMER1=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_VPX=y
+BR2_PACKAGE_GST1_LIBAV=y
 BR2_PACKAGE_MJPEGTOOLS=y
+BR2_PACKAGE_OPUS_TOOLS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_CUSTOMLOGO_PATH="${NERVES_DEFCONFIG_DIR}/logo_custom_clut224.ppm"
+BR2_PACKAGE_LIBVA_UTILS=y
+BR2_PACKAGE_MESA3D=y
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VC4=y
+BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT5BASE_CUSTOM_CONF_OPTS="-release -opengl es2 -device linux-rasp-pi3-vc4-g++"
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="eglfs"
@@ -51,13 +62,15 @@ BR2_PACKAGE_QT5BASE_GIF=y
 BR2_PACKAGE_QT5BASE_PNG=y
 BR2_PACKAGE_QT5MULTIMEDIA=y
 BR2_PACKAGE_QT5WEBENGINE=y
+BR2_PACKAGE_QT5WEBENGINE_PROPRIETARY_CODECS=y
+BR2_PACKAGE_QT5WEBENGINE_ALSA=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_KERNEL_4_19=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
 BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
-BR2_PACKAGE_RPI_USERLAND=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
+BR2_PACKAGE_MP4V2=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_LIBMNL=y
@@ -73,7 +86,6 @@ BR2_PACKAGE_SUDO=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_NERVES_SYSTEM_NAME="kiosk_system_rpi3"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf ${NERVES_DEFCONFIG_DIR}/cmdline.txt ${NERVES_DEFCONFIG_DIR}/config.txt"
-BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_NOTO_EMOJI=y
